# mathlib5

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CLEAN.md  WORKSPACE.bazel  flake.nix  lake-manifest.json  lakefile.lean  lean-toolchain  metadata.json
ci/: run_e2e.sh
examples/playground/: simple_sum.apl
kernel/: verified_kernel.cm
layers/apl/src/: Parser.hs
layers/asp/: README.md  metadata.json
layers/codeql/: README.md
layers/fol/: README.md  metadata.json
layers/hol/: metadata.json
layers/hol/lean/: Mathlib5.lean
layers/hol/lean/Mathlib5/: Core.lean  GatesNormalization.lean
layers/liquid/: metadata.json
layers/liquid/src/: Bridge.hs
layers/pnp-attack/: README.md
layers/prism-skills/: README.md  metadata.json
layers/sexpr/src/: AST.hs
layers/sorryhunter/: README.md
malice_layer2/: metadata.json
mathlib5-ffi-bridge/: lakefile.lean  leanpkg.toml  metadata.json
mathlib5-ffi-bridge/C/include/: bridge.h
mathlib5-ffi-bridge/C/src/: bridge.c
mathlib5-ffi-bridge/Lean/: Bridge.lean  Build.lean  TestBridge.lean
mathlib5-ffi-bridge/Lean/TheoremCalc/: Main.lean
mathlib5-ffi-bridge/scripts/: nats_build_orchestrator.sh  receipt.sh  verify.sh
sorrydb/: metadata.json
theorems/: THEOREMS.md
